--- a/index.html
+++ b/index.html
@@ -12,35 +12,42 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background: linear-gradient(135deg, #ff9a9e 0%, #fecfef 100%);
+            /* Lacivert tonlama ve arka plan görseli */
+            /* BURAYA KENDİ FOTOĞRAF LİNKİNİ YAPIŞTIR */
+            background: linear-gradient(to bottom, rgba(10, 25, 60, 0.8), rgba(5, 10, 30, 0.9)), url('https://images.unsplash.com/photo-1531804466715-60239456710e?q=80&w=1974&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D');
+            background-size: cover;
+            background-position: center;
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            color: #fff;
+            color: #fff; /* Yazı rengi beyaz */
             text-align: center;
         }
         .container {
-            background: rgba(255, 255, 255, 0.2);
+            /* Kutu için koyu lacivert, yarı saydam arka plan */
+            background: rgba(30, 50, 100, 0.5);
             padding: 40px;
             border-radius: 20px;
-            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
-            backdrop-filter: blur(4px);
-            border: 1px solid rgba(255, 255, 255, 0.18);
+            box-shadow: 0 8px 32px 0 rgba(0, 0, 50, 0.5);
+            backdrop-filter: blur(8px); /* Bulanıklık efekti artırıldı */
+            border: 1px solid rgba(100, 150, 255, 0.2);
             animation: fadeIn 2s ease-in;
         }
         h1 {
             font-size: 3.5rem;
             margin-bottom: 10px;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.2);
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
         }
         p {
             font-size: 1.5rem;
             margin-top: 0;
+            text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
         }
         .heart {
             font-size: 5rem;
-            color: #ff4b4b;
+            color: #ff4b4b; /* Kalp rengi kırmızı kaldı, lacivertte güzel durur */
             animation: heartbeat 1.2s infinite;
             margin-top: 20px;
             display: block;
+            text-shadow: 0 0 10px rgba(255, 75, 75, 0.5);
         }
         @keyframes heartbeat {
             0% { transform: scale(1); }
@@ -58,7 +65,7 @@
 <body>
 
     <div class="container">
-        <h1>İbrahim ❤️ Yaso</h1>
+        <h1>HALİL ❤️ YASO</h1>
         <p>Seni Çok Seviyorum!</p>
         <span class="heart">❤️</span>
     </div>
